<resources>
    <string name="app_name">YoungEuler</string>
    <string name="logoTxt">Young Euler</string>
    <string name="startButton">Start Quiz</string>
    <string name="helpButton">Hjelp</string>
    <string name="newQst">Nytt Spørsmål</string>
    <string name="menuButton">Meny</string>
    <string name="cameraButton">Kamera</string>
    <string name="helpTxt">Når man starter quizen dukker det opp et spørsmål du skal løse. \n\nRegler:\n1. Sett sammen stavene ved siden av hverandre (addering). \n 2. Hvis man har gjort riktig, får man opp tilbakemelding på oppgaven.\n\n-Lykke til!</string>
    <string name="questionTxt">Henter spørsmål</string>
    <string name="tilbakeTxt">Ditt spørsmål var: 2 x 2</string>
    <string name="logoBackup">logo</string>
    <bool name="riktigGalt">false</bool>
    <string name="uploadBtn">Last opp bildet</string>
    <string name="uploadTxt">Sjekk svar!</string>
</resources>
